Minor modificiations to streamline the inclusion of Google Cloud settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ keywords = django, django-admin, google sheets, google drive, data import
 
 
 [options]
+include_package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
