Added links to RTD pages to 'README.md' and 'setup.cfg'; commented out 'html_theme' in 'conf.py'

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ license = BSD-2-Clause
 url = https://github.com/kenkuhhaut/django-gsheets-import
 project_urls =
     Bug Tracker = https://github.com/kenkuhhaut/django-gsheets-import/issues
+    Documentation = https://django-gsheets-import.readthedocs.io/en/latest/
+    Source Code = https://github.com/kenkuhhaut/django-gsheets-import
 classifiers =
     Development Status :: 3 - Alpha
     Topic :: Software Development
