Minor updates in 'setup.cfg' and docs; rolled version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-gsheets-import
-version = 0.0.1
+version = attr: gsheets_import.__version__
 author = Alexander Helmboldt
 author_email = alexander.helmboldt@embl.de
 description = A Django app to import tabular data from Google Sheets
@@ -36,5 +36,3 @@ install_requires =
     Django >= 3.2
     django-import-export >= 2.5.0
     google-api-python-client >= 2.1.0
-    google-auth-httplib2 >= 0.1.0
-    google-auth-oauthlib >= 0.4.4
